--- a/src/assets/styles/_table.scss
+++ b/src/assets/styles/_table.scss
@@ -5,12 +5,13 @@ table {
   th {
     text-align: center;
   }
-
-  .identity-action-button {
-    min-width: 26px;
-    padding: 0 6px;
-    margin: 4px;
-    line-height: 25px;
+  td {
+    .action-button {
+      min-width: 26px;
+      padding: 0 6px;
+      margin: 4px;
+      line-height: 25px;
+    }
   }
 }
 
