--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
@@ -188,7 +188,7 @@
             <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelClientType" | translate }}</mat-label>
             <mat-select [disabled]="isTeller" formControlName="clientTypeId">
               <mat-option *ngFor="let clientType of clientTypeOptions" [value]="clientType.id">
-                {{ clientType.name }}
+                {{ clientType.description }}
               </mat-option>
             </mat-select>
           </mat-form-field>
