--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
@@ -1,19 +1,19 @@
-<h1 class="m-l-10">Đại lý: {{group.name}} </h1>
+<h1 class="m-l-10">Đại lý: {{ group?.name }}</h1>
 <mat-divider></mat-divider>
 
-
 <mat-card class="mat-elevation-z2 batchTxnCss">
-
-  <mat-card-header class="p-10" fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="2%"
-    fxLayout.lt-md="column">
-
-
+  <mat-card-header
+    class="p-10"
+    fxLayout="row wrap"
+    fxLayoutAlign="center center"
+    fxLayoutGap="2%"
+    fxLayout.lt-md="column"
+  >
     <div fxLayout="row" fxFlex="18%" class="export-item">
       <img src="assets/images/icons/transaction_total.svg" />
       <div fxLayout="column">
         <span class="money-total">{{ dataSource.length }}</span>
         <span>Tổng giao dịch </span>
-
       </div>
     </div>
     <!-- <div fxLayout="row" fxFlex="18%" class="export-item">
@@ -28,7 +28,7 @@
         <div fxLayout="column">
           <span class="money-total">{{ totalRequest | money }}</span>
           <span>Tiền đề xuất</span>
-        </div> 
+        </div>
       </div> -->
     <!--      <div fxLayout="row" fxFlex="18%" class="export-item">-->
     <!--        <img src="assets/images/icons/fees.svg">-->
@@ -51,23 +51,15 @@
         <span>Tổng số bill trên POS</span>
       </div>
     </div>
-
   </mat-card-header>
 
   <mat-card-content>
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
       <mat-form-field fxFlex="30%">
         <mat-label>Khách hàng</mat-label>
-        <input matInput [formControl]="formFilter" [matAutocomplete]="clientsAutocomplete" />
+        <input matInput [formControl]="formFilter" (click)="this.resetAutoComplete()"
+        [matAutocomplete]="clientsAutocomplete" />
       </mat-form-field>
-
-      <!--      <mat-autocomplete autoActiveFirstOption #clientsAutocomplete="matAutocomplete">-->
-      <!--        <mat-option *ngFor="let client of members" [value]="client.clientId">-->
-      <!--          {{ client.cardNumber.slice(0, 6) }}&nbsp;X&nbsp;{{ client.cardNumber.slice(client.cardNumber.length - 5, client.cardNumber.length) }}&nbsp;-->
-      <!--          - -->
-      <!--          &nbsp;{{client.fullName}}-->
-      <!--        </mat-option>-->
-      <!--      </mat-autocomplete>-->
 
       <mat-autocomplete autoActiveFirstOption #clientsAutocomplete="matAutocomplete" [displayWith]="displayClient">
         <mat-option *ngFor="let client of filteredOptions | async" [value]="client">
@@ -75,41 +67,45 @@
         </mat-option>
       </mat-autocomplete>
 
-      <!--      <mat-form-field fxFlex="30%" *ngIf="formFilter.contains('member')">-->
-      <!--        <mat-label>Khách hàng</mat-label>-->
-      <!--        <mat-select required formControlName="member">-->
-      <!--          <mat-option *ngFor="let type of members"-->
-      <!--                      [value]="type">-->
-      <!--            {{ type.cardNumber.slice(0, 6) }}&nbsp;X&nbsp;{{ type.cardNumber.slice(type.cardNumber.length - 5, type.cardNumber.length) }}&nbsp;-->
-      <!--            - -->
-      <!--            &nbsp;{{type.fullName}}-->
-      <!--          </mat-option>-->
-      <!--        </mat-select>-->
-      <!--        <mat-error *ngIf="formFilter.controls.member.hasError('required')">-->
-      <!--          Vui lòng chọn khách hàng-->
-      <!--        </mat-error>-->
-      <!--      </mat-form-field>-->
       <div fxFlex="10%">
-        <button mat-button type="button" (click)="addRow()"
-          style="background: #3b74ff; color: white; max-height: 50px; margin-top: 8px; width: 100%">
+        <button
+          mat-button
+          type="button"
+          (click)="addRow()"
+          style="background: #3b74ff; color: white; max-height: 50px; margin-top: 8px; width: 100%"
+        >
           <img src="assets/images/icons/add-while.svg" />&nbsp; Thêm
         </button>
       </div>
       <div fxFlex="10%">
-        <button mat-button (click)="addCard()" type="button"
-          style="background: #3b74ff; color: white; max-height: 50px; width: 100%; margin-top: 8px">
+        <button
+          mat-button
+          (click)="addCard()"
+          type="button"
+          style="background: #3b74ff; color: white; max-height: 50px; width: 100%; margin-top: 8px"
+        >
           <img src="assets/images/icons/credit-card-while.svg" />&nbsp; Thêm thẻ
         </button>
       </div>
       <div fxFlex="15%">
-        <button mat-button (click)="makeFeeOnAdvance()" type="button" *ngIf="batchTxnName"
-          style="background: #3b74ff; color: white; max-height: 50px; width: 100%; margin-top: 8px">
+        <button
+          mat-button
+          (click)="makeFeeOnAdvance()"
+          type="button"
+          *ngIf="batchTxnName"
+          style="background: #3b74ff; color: white; max-height: 50px; width: 100%; margin-top: 8px"
+        >
           <img src="assets/images/icons/money.svg" width="25" height="25" />&nbsp; Ứng tiền trước
         </button>
       </div>
       <div fxFlex="15%">
-        <button mat-button (click)="exportTransactions()" type="button" *ngIf="batchTxnName"
-          style="background: #3b74ff; color: white; max-height: 50px; width: 100%; margin-top: 8px">
+        <button
+          mat-button
+          (click)="exportTransactions()"
+          type="button"
+          *ngIf="batchTxnName"
+          style="background: #3b74ff; color: white; max-height: 50px; width: 100%; margin-top: 8px"
+        >
           <img src="assets/images/icons/transactions.svg" width="25" height="25" />&nbsp;Xuất báo cáo
         </button>
       </div>
@@ -125,7 +121,7 @@
             </label>
             <br />
             <label class="card-info">
-              {{ (form.get("identitydocumentsId")?.value).replace("XXX-XXX", "X") }}
+              {{ form.get("identitydocumentsId")?.value.replace("XXX-XXX", "X") }}
             </label>
           </td>
         </ng-container>
@@ -148,8 +144,10 @@
         <ng-container matColumnDef="rate">
           <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Tỉ lệ Phí</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let form" [formGroup]="form">
-            <mat-form-field *ngIf="form.contains('rate') && !form.contains('saved')"
-              style="width: 60px; padding-right: 8px; padding-left: 8px">
+            <mat-form-field
+              *ngIf="form.contains('rate') && !form.contains('saved')"
+              style="width: 60px; padding-right: 8px; padding-left: 8px"
+            >
               <mat-label>Tỉ lệ phí</mat-label>
               <input matInput required formControlName="rate" />
             </mat-form-field>
@@ -171,12 +169,19 @@
         <ng-container matColumnDef="terminalId">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Máy POS</th>
           <td mat-cell *matCellDef="let form" [formGroup]="form">
-            <mat-form-field style="width: 100% !important" appearance="fill"
-              *ngIf="form.contains('terminalId') && !form.contains('saved')" class="select-custom">
+            <mat-form-field
+              style="width: 100% !important"
+              appearance="fill"
+              *ngIf="form.contains('terminalId') && !form.contains('saved')"
+              class="select-custom"
+            >
               <mat-label>Chọn máy POS</mat-label>
-              <mat-select style="min-width: 400px;" [required]="form?.data?.terminals?.length > 0" formControlName="terminalId">
-                <mat-option *ngFor="let type of form?.data?.terminals"
-                  [value]="type.terminalId">
+              <mat-select
+                style="min-width: 400px"
+                [required]="form?.data?.terminals?.length > 0"
+                formControlName="terminalId"
+              >
+                <mat-option *ngFor="let type of form?.data?.terminals" [value]="type.terminalId">
                   {{ type.terminalName }} -
                   {{ type.limitRemain | money }}
                 </mat-option>
@@ -211,9 +216,10 @@
         <!--            </ng-container>-->
 
         <ng-container matColumnDef="batchNo">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header style="text-align: center;">Batch No
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header style="text-align: center">
+            Batch No
           </th>
-          <td mat-cell fxHide fxShow.gt-md *matCellDef="let form" [formGroup]="form" style="text-align: center;">
+          <td mat-cell fxHide fxShow.gt-md *matCellDef="let form" [formGroup]="form" style="text-align: center">
             <mat-form-field *ngIf="form.contains('batchNo') && !form.contains('saved')" class="no-input">
               <mat-label>Batch No</mat-label>
               <input required matInput formControlName="batchNo" />
@@ -222,9 +228,9 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="tid" style="text-align: center;">
+        <ng-container matColumnDef="tid" style="text-align: center">
           <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Trace No</th>
-          <td mat-cell fxHide fxShow.gt-md *matCellDef="let form" [formGroup]="form" style="text-align: center;">
+          <td mat-cell fxHide fxShow.gt-md *matCellDef="let form" [formGroup]="form" style="text-align: center">
             <mat-form-field *ngIf="form.contains('tid') && !form.contains('saved')" class="no-input">
               <mat-label>Trace No</mat-label>
               <input required matInput formControlName="tid" />
@@ -242,7 +248,7 @@
             </mat-form-field>
             <span *ngIf="form.contains('saved')" style="text-align: right">{{
               form.get("terminalAmount").value | money
-              }}</span>
+            }}</span>
           </td>
         </ng-container>
         <ng-container matColumnDef="actions" style="width: 25px">
@@ -257,13 +263,25 @@
                 #tooltip="matTooltip"
                 ><img src="assets/images/icons/more.svg"
               /></span> -->
-            <button class="action-button" mat-raised-button color="primary" (click)="onSave(form)"
-              *ngIf="!form.contains('saved')" matTooltip="Lưu giao dịch">
+            <button
+              class="action-button"
+              mat-raised-button
+              color="primary"
+              (click)="onSave(form)"
+              *ngIf="!form.contains('saved')"
+              matTooltip="Lưu giao dịch"
+            >
               <i class="fas fa-save"></i>
             </button>
-   
-            <button class="action-button" mat-raised-button color="warn" *ngIf="!form.contains('saved')"
-              (click)="deleteRow(form)" matTooltip="Xóa giao dịch">
+
+            <button
+              class="action-button"
+              mat-raised-button
+              color="warn"
+              *ngIf="!form.contains('saved')"
+              (click)="deleteRow(form)"
+              matTooltip="Xóa giao dịch"
+            >
               <i class="fas fa-trash-alt"></i>
             </button>
           </td>
@@ -276,9 +294,14 @@
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let element; columns: displayedColumns" [formGroup]="element"
-          class="example-element-row" [class.example-expanded-row]="expandedElement === element"
-          (click)="expandedElement = expandedElement === element ? null : element"></tr>
+        <tr
+          mat-row
+          *matRowDef="let element; columns: displayedColumns"
+          [formGroup]="element"
+          class="example-element-row"
+          [class.example-expanded-row]="expandedElement === element"
+          (click)="expandedElement = expandedElement === element ? null : element"
+        ></tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         <!--      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>-->
         <!--[routerLink]="['transactions/view', row.transactionId]"-->
@@ -288,7 +311,6 @@
     <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
       <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
     </div>
-
   </mat-card-content>
   <!-- <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false" style="width: 50px">
     <ng-template matMenuContent let-form="form" style="width: 50px">
