add paid amount per schedule booking
add paid amount per schedule booking

--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
@@ -118,7 +118,7 @@
               style="color: red;"
               title="Chi tiền"
               mat-dialog-close
-              (click)="addFeeDialogByTransactionId(false, transaction.rollTermId)"
+              (click)="addFeeDialogByTransactionId(false, transaction.rollTermId, transaction.bookingAmount)"
             >
               attach_money
             </mat-icon>
