--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,127 +1,149 @@
-<mat-card class="container">
+<!-- <mat-tab-group mat-align-tabs="start">
+  <mat-tab label="Khách hàng">
+    <mat-card class="container">
 
-  <div fxLayout="row wrap" fxLayout.lt-md="column">
-    <div class="search-box" fxFlex.gt-md="48%"  >
-      <mat-form-field>
-        <input matInput [placeholder]="'Client_Component.inputPlaceholderClosedCIF'| translate"
-               midasAfterValueChanged
-               (delayedInput)="applyFilter($event.target.value)">
-      </mat-form-field>
-      <mat-checkbox #showClosedAccounts labelPosition="after">{{ 'Client_Component.checkBoxShowClosedAccount'| translate}}
-      </mat-checkbox>
-    </div>
-    <div class="action-button" fxFlex.gt-md="48%" fxLayout.lt-md="row" fxLayoutAlign.lt-md="space-around center" fxLayoutAlign.gt-md="end center">
-      <button mat-raised-button color="primary" [routerLink]="['../', 'organization', 'bulk-import', 'Clients']" *midasHasPermission="'CREATE_CLIENT'">
-        <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;{{ 'Client_Component.buttonImportClient'| translate}}
-      </button>
-      <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_CLIENT'">
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ 'Client_Component.buttonCreateClient'| translate}}
-      </button>
-    </div>
-  </div>
-
-  <div >
-    <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell  *matHeaderCellDef mat-sort-header='displayName'> {{ 'Client_Component.tblColName'| translate}}</th>
-        <td mat-cell *matCellDef="let row"> {{row.displayName}} </td>
-      </ng-container>
-
-      <!-- Account no Column -->
-      <ng-container matColumnDef="clientno">
-        <th mat-header-cell fxHide fxShow.gt-md  *matHeaderCellDef mat-sort-header='accountNo'> {{ 'Client_Component.tblColAccount'| translate}}  </th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.accountNo}} </td>
-      </ng-container>
-
-      <!-- External ID Column -->
-      <ng-container matColumnDef="externalid">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header='externalId'> {{ 'Client_Component.tblColExternalID'| translate}}  </th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.externalId}} </td>
-      </ng-container>
-
-      <!-- Status Column -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell  *matHeaderCellDef> {{ 'Client_Component.tblColStatus'| translate}}  </th>
-        <td mat-cell style="width: auto;" *matCellDef="let row">
-          <div style="margin: auto;" [ngClass]="row.active|statusLookup">
-            <fa-icon icon="stop"></fa-icon>
-          </div>
-        </td>
-      </ng-container>
-
-      <!-- Mobile Number Column-->
-      <ng-container matColumnDef="mobileNo">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header> {{ 'Client_Component.tblColMobileNumber'| translate}} </th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let client"> {{ client.mobileNo }} </td>
-      </ng-container>
-
-      <!--Gender column-->
-      <ng-container matColumnDef="gender">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef> {{ 'Client_Component.tblColGender'| translate}}  </th>
-        <td mat-cell fxHide fxShow.gt-md  *matCellDef="let client"> {{ client.gender.name }} </td>
-      </ng-container>
-
-      <!-- Color Column -->
-      <ng-container matColumnDef="office">
-        <th mat-header-cell fxHide fxShow.gt-md  *matHeaderCellDef mat-sort-header='officeName'> {{ 'Client_Component.tblColOfficeName'| translate}}  </th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.officeName}} </td>
-      </ng-container>
-
-      <!-- ID Column -->
-      <ng-container matColumnDef="staff">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header='staffName'> {{ 'Client_Component.tblColStaffName'| translate}}  </th>
-        <td mat-cell fxHide fxShow.gt-md  *matCellDef="let row"> {{row.staffName}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="expandedDetail">
-        <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-          <div class="example-element-detail"
-               [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-            <div class="example-element-description" fxLayout="column">
-              <div>
-                <span style="font-weight: bold;">{{ 'Client_Component.tblColAccount'| translate}} :</span> &nbsp;{{element.accountNo}}
+      <div fxLayout="row wrap" fxLayout.lt-md="column">
+        <div class="search-box" fxFlex.gt-md="48%"  >
+          <mat-form-field>
+            <input matInput [placeholder]="'Client_Component.inputPlaceholderClosedCIF'| translate"
+                   midasAfterValueChanged
+                   (delayedInput)="applyFilter($event.target.value)">
+          </mat-form-field>
+          <mat-checkbox #showClosedAccounts labelPosition="after">{{ 'Client_Component.checkBoxShowClosedAccount'| translate}}
+          </mat-checkbox>
+        </div>
+        <div class="action-button" fxFlex.gt-md="48%" fxLayout.lt-md="row" fxLayoutAlign.lt-md="space-around center" fxLayoutAlign.gt-md="end center">
+          <button mat-raised-button color="primary" [routerLink]="['../', 'organization', 'bulk-import', 'Clients']" *midasHasPermission="'CREATE_CLIENT'">
+            <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;{{ 'Client_Component.buttonImportClient'| translate}}
+          </button>
+          <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_CLIENT'">
+            <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ 'Client_Component.buttonCreateClient'| translate}}
+          </button>
+        </div>
+      </div>
+    
+      <div >
+        <table class="mat-elevation-z8" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>-->
+          <!-- Name Column -->
+          <!-- <ng-container matColumnDef="name">
+            <th mat-header-cell  *matHeaderCellDef mat-sort-header='displayName'> {{ 'Client_Component.tblColName'| translate}}</th>
+            <td mat-cell *matCellDef="let row"> {{row.displayName}} </td>
+          </ng-container> -->
+    
+          <!-- Account no Column -->
+          <!-- <ng-container matColumnDef="clientno">
+            <th mat-header-cell fxHide fxShow.gt-md  *matHeaderCellDef mat-sort-header='accountNo'> {{ 'Client_Component.tblColAccount'| translate}}  </th>
+            <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.accountNo}} </td>
+          </ng-container>
+     -->
+          <!-- External ID Column -->
+          <!-- <ng-container matColumnDef="externalid">
+            <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header='externalId'> {{ 'Client_Component.tblColExternalID'| translate}}  </th>
+            <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.externalId}} </td>
+          </ng-container> -->
+    
+          <!-- Status Column -->
+          <!-- <ng-container matColumnDef="status">
+            <th mat-header-cell  *matHeaderCellDef> {{ 'Client_Component.tblColStatus'| translate}}  </th>
+            <td mat-cell style="width: auto;" *matCellDef="let row">
+              <div style="margin: auto;" [ngClass]="row.active|statusLookup">
+                <fa-icon icon="stop"></fa-icon>
               </div>
-              <div>
-                <span style="font-weight: bold;"> {{ 'Client_Component.tblColExternalID'| translate}} :</span> &nbsp;{{element.externalId}}
+            </td>
+          </ng-container> -->
+    
+          <!-- Mobile Number Column-->
+          <!-- <ng-container matColumnDef="mobileNo">
+            <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header> {{ 'Client_Component.tblColMobileNumber'| translate}} </th>
+            <td mat-cell fxHide fxShow.gt-md *matCellDef="let client"> {{ client.mobileNo }} </td>
+          </ng-container> -->
+    
+          <!--Gender column-->
+          <!-- <ng-container matColumnDef="gender">
+            <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef> {{ 'Client_Component.tblColGender'| translate}}  </th>
+            <td mat-cell fxHide fxShow.gt-md  *matCellDef="let client"> {{ client.gender.name }} </td>
+          </ng-container> -->
+    
+          <!-- Color Column -->
+          <!-- <ng-container matColumnDef="office">
+            <th mat-header-cell fxHide fxShow.gt-md  *matHeaderCellDef mat-sort-header='officeName'> {{ 'Client_Component.tblColOfficeName'| translate}}  </th>
+            <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.officeName}} </td>
+          </ng-container> -->
+    
+          <!-- ID Column -->
+          <!--
+          <ng-container matColumnDef="staff">
+            <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header='staffName'> {{ 'Client_Component.tblColStaffName'| translate}}  </th>
+            <td mat-cell fxHide fxShow.gt-md  *matCellDef="let row"> {{row.staffName}} </td>
+          </ng-container>
+    
+          <ng-container matColumnDef="expandedDetail">
+            <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+              <div class="example-element-detail"
+                   [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                <div class="example-element-description" fxLayout="column">
+                  <div>
+                    <span style="font-weight: bold;">{{ 'Client_Component.tblColAccount'| translate}} :</span> &nbsp;{{element.accountNo}}
+                  </div>
+                  <div>
+                    <span style="font-weight: bold;"> {{ 'Client_Component.tblColExternalID'| translate}} :</span> &nbsp;{{element.externalId}}
+                  </div>
+                  <div>
+                    <span style="font-weight: bold;"> {{ 'Client_Component.tblColMobileNumber'| translate}} :</span> &nbsp;{{element.mobileNo}}
+                  </div>
+                  <div>
+                    <span style="font-weight: bold;"> {{ 'Client_Component.tblColGender'| translate}} :</span> &nbsp;{{element.gender.name}}
+                  </div>
+                  <div>
+                    <span style="font-weight: bold;"> {{ 'Client_Component.tblColOfficeName'| translate}} :</span> &nbsp;{{element.officeName}}
+                  </div>
+                  <div>
+                    <span style="font-weight: bold;"> {{ 'Client_Component.tblColStaffName'| translate}} :</span> &nbsp;{{element.staffName}}
+                  </div>
+                </div>
               </div>
-              <div>
-                <span style="font-weight: bold;"> {{ 'Client_Component.tblColMobileNumber'| translate}} :</span> &nbsp;{{element.mobileNo}}
-              </div>
-              <div>
-                <span style="font-weight: bold;"> {{ 'Client_Component.tblColGender'| translate}} :</span> &nbsp;{{element.gender.name}}
-              </div>
-              <div>
-                <span style="font-weight: bold;"> {{ 'Client_Component.tblColOfficeName'| translate}} :</span> &nbsp;{{element.officeName}}
-              </div>
-              <div>
-                <span style="font-weight: bold;"> {{ 'Client_Component.tblColStaffName'| translate}} :</span> &nbsp;{{element.staffName}}
-              </div>
-            </div>
-          </div>
-        </td>
-      </ng-container>
+            </td>
+          </ng-container>
+    
+          <ng-container matColumnDef="link">
+            <th mat-header-cell  *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let row"  >
+              <button mat-mini-fab color="primary" [routerLink]="[row.id,'identities']" [queryParams]="{ typeViewClient: 'view'}"
+    
+                    [matTooltip]="'ShareLabel.lblViewDetail'| translate" matTooltipPosition="above">
+                <i class="fa fa-address-card" aria-hidden="true"></i></button></td>
+          </ng-container>
+    
+          <tr mat-header-row  *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+              class="example-element-row"
+              [class.example-expanded-row]="expandedElement === element"
+              (click)="expandedElement = expandedElement === element ? null : element">
+          </tr>
+          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+        </table>
+    
+        <mat-paginator [length]="dataSource?.records$ | async" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"
+                       showFirstLastButtons></mat-paginator>
+      </div>
+    
+    </mat-card>
+  </mat-tab>
+  <mat-tab label="Nhân viên"></mat-tab>
+  <mat-tab label="Đối tác dùng máy"></mat-tab>
+  
+ 
+</mat-tab-group> -->
+<nav mat-tab-nav-bar>
+  <a mat-tab-link
+     *ngFor="let link of navLinks"
+     [routerLink]="link.path"
+     routerLinkActive #rla="routerLinkActive"
+     [active]="rla.isActive">
+    {{link.label}}
+  </a>
+</nav>
 
-      <ng-container matColumnDef="link">
-        <th mat-header-cell  *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let row"  >
-          <button mat-mini-fab color="primary" [routerLink]="[row.id,'identities']" [queryParams]="{ typeViewClient: 'view'}"
+<router-outlet></router-outlet>
 
-                [matTooltip]="'ShareLabel.lblViewDetail'| translate" matTooltipPosition="above">
-            <i class="fa fa-address-card" aria-hidden="true"></i></button></td>
-      </ng-container>
 
-      <tr mat-header-row  *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let element; columns: displayedColumns;"
-          class="example-element-row"
-          [class.example-expanded-row]="expandedElement === element"
-          (click)="expandedElement = expandedElement === element ? null : element">
-      </tr>
-      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-    </table>
-
-    <mat-paginator [length]="dataSource?.records$ | async" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"
-                   showFirstLastButtons></mat-paginator>
-  </div>
-
-</mat-card>
