--- a/src/app/clients/client-customer/client-customer.component.html
+++ b/src/app/clients/client-customer/client-customer.component.html
@@ -110,7 +110,7 @@
             <ng-container matColumnDef="link">
               <th mat-header-cell  *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let row"  >
-                <button mat-mini-fab color="primary" [routerLink]="['../'+row.id,'identities']" [queryParams]="{ typeViewClient: 'view'}"
+                <button mat-mini-fab color="primary" [routerLink]="['../'+row.id,this.tabWillView ]" [queryParams]="this.tabQueryParams"
       
                       [matTooltip]="'ShareLabel.lblViewDetail'| translate" matTooltipPosition="above">
                   <i class="fa fa-address-card" aria-hidden="true"></i></button></td>
