--- a/src/app/clients/edit-client/edit-client.component.html
+++ b/src/app/clients/edit-client/edit-client.component.html
@@ -178,7 +178,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">{{'Client_Component.ClientStepper.buttonCancel' |translate}}</button>
+        <!-- <button type="button" mat-raised-button [routerLink]="['../']">{{'Client_Component.ClientStepper.buttonCancel' |translate}}</button> -->
+        <button type="button" mat-raised-button (click)="goback()">{{'Client_Component.ClientStepper.buttonCancel' |translate}}</button>
         <button mat-raised-button color="primary" [disabled]="!editClientForm.valid" (click)="submit()">{{'Client_Component.ClientStepper.buttonSubmit' |translate}}</button>
       </mat-card-actions>
 
