--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -83,7 +83,9 @@
 </mat-toolbar>
 
 <mat-menu #institutionMenu="matMenu" [overlapTrigger]="false">
-  <button mat-menu-item routerLink="/clients">{{ "Toolbar_Component.lblClient" | translate }}</button>
+  <button mat-menu-item routerLink="/clients/customer">{{ "Toolbar_Component.lblClient" | translate }}</button>
+  <button mat-menu-item routerLink="/clients/staff">Nhân viên</button>
+  <button mat-menu-item routerLink="/clients/interchange">Đối tác Interchange</button>
   <button mat-menu-item routerLink="/groups">{{ "Toolbar_Component.lblGroup" | translate }}</button>
   <button mat-menu-item *midasHasPermission="'ALL_FUNCTIONS'" routerLink="/centers">Centers</button>
   <button mat-menu-item routerLink="/accounts/balance-clients">
