fix require external key
fix require external key

--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
@@ -156,7 +156,7 @@
 
           <mat-form-field fxFlex="48%">
             <mat-label>{{ "Client_Component.ClientStepper.GeneralStep.labelExternalID" | translate }}</mat-label>
-            <input matInput required formControlName="externalId" />
+            <input matInput  formControlName="externalId" />
           </mat-form-field>
 
           <div fxFlex="48%" fxLayout="column" class="custom-files-input">
