apply default midas branding identification (red and wihite) and fix UI for signature button

--- a/src/app/clients/client-customer/client-customer.component.html
+++ b/src/app/clients/client-customer/client-customer.component.html
@@ -1,5 +1,5 @@
 <!-- <div class=" mat-typography"> -->
-    <mat-card class="container-fluid m-6">
+    <mat-card class="container-fluid m-l-30 m-r-30 m-t-10">
 
         <div fxLayout="row wrap" fxLayout.lt-md="column">
           <div class="search-box" fxFlex.gt-md="48%"  >
