--- a/src/app/clients/clients-view/clients-view.component.scss
+++ b/src/app/clients/clients-view/clients-view.component.scss
@@ -59,6 +59,7 @@
       // align-self: flex-end;
       width: 100%;
       margin: 0;
+      margin-top: 1rem;
       button{
         width: 90%;
       }
