--- a/src/app/home/calendar/calendar.component.html
+++ b/src/app/home/calendar/calendar.component.html
@@ -1,40 +1,44 @@
 <!-- Phần calendar -->
-<div  fxLayout="column">
+<div fxLayout="column" class="midascalendar">
   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-around start" fxLayoutGap="1%">
 
-      <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-        <mat-button-toggle mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate"
+    <mat-button-toggle-group  color="primary" appearance="legacy" name="fontStyle" aria-label="Font Style">
+      <mat-button-toggle color="primary" mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate"
         (viewDateChange)="closeOpenMonthViewDay()">Tháng trước</mat-button-toggle>
-        <mat-button-toggle mwlCalendarToday [(viewDate)]="viewDate">Tháng này</mat-button-toggle>
-        <mat-button-toggle mwlCalendarNextView [view]="view" [(viewDate)]="viewDate"
+      <mat-button-toggle mwlCalendarToday [(viewDate)]="viewDate">Tháng này</mat-button-toggle>
+      <mat-button-toggle mwlCalendarNextView [view]="view" [(viewDate)]="viewDate"
         (viewDateChange)="closeOpenMonthViewDay()">Tháng sau</mat-button-toggle>
-      </mat-button-toggle-group>
+    </mat-button-toggle-group>
 
     <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
 
     <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-      <mat-button-toggle  (click)="setView(CalendarView.Month)" [class.active]="view === CalendarView.Month">Lịch tháng</mat-button-toggle>
-      <mat-button-toggle  (click)="setView(CalendarView.Week)" [class.active]="view === CalendarView.Week">Lịch tuần</mat-button-toggle>
-      <mat-button-toggle (click)="setView(CalendarView.Day)" [class.active]="view === CalendarView.Day">Lịch ngày</mat-button-toggle>
+      <mat-button-toggle (click)="setView(CalendarView.Month)" [class.active]="view === CalendarView.Month">Lịch tháng
+      </mat-button-toggle>
+      <mat-button-toggle (click)="setView(CalendarView.Week)" [class.active]="view === CalendarView.Week">Lịch tuần
+      </mat-button-toggle>
+      <mat-button-toggle (click)="setView(CalendarView.Day)" [class.active]="view === CalendarView.Day">Lịch ngày
+      </mat-button-toggle>
     </mat-button-toggle-group>
 
+  </div>
+  <br />
+  <div [ngSwitch]="view">
+    <mwl-calendar-month-view *ngSwitchCase="CalendarView.Month" [viewDate]="viewDate" [events]="events"
+      [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)"
+      (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
+    </mwl-calendar-month-view>
+    <mwl-calendar-week-view *ngSwitchCase="CalendarView.Week" [viewDate]="viewDate" [events]="events"
+      [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)"
+      (eventTimesChanged)="eventTimesChanged($event)">
+    </mwl-calendar-week-view>
+    <mwl-calendar-day-view *ngSwitchCase="CalendarView.Day" [viewDate]="viewDate" [events]="events" [refresh]="refresh"
+      (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
+    </mwl-calendar-day-view>
+  </div>
 </div>
-<br />
-<div [ngSwitch]="view">
-  <mwl-calendar-month-view *ngSwitchCase="CalendarView.Month" [viewDate]="viewDate" [events]="events"
-    [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)"
-    (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
-  </mwl-calendar-month-view>
-  <mwl-calendar-week-view *ngSwitchCase="CalendarView.Week" [viewDate]="viewDate" [events]="events" [refresh]="refresh"
-    (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
-  </mwl-calendar-week-view>
-  <mwl-calendar-day-view *ngSwitchCase="CalendarView.Day" [viewDate]="viewDate" [events]="events" [refresh]="refresh"
-    (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)">
-  </mwl-calendar-day-view>
-</div>
-
-<!-- Phần bảng danh sách công việc -->
-<!-- <h3>
+  <!-- Phần bảng danh sách công việc -->
+  <!-- <h3>
   Thêm công việc mới:
   <button  mat-mini-fab  color="primary" (click)="addEvent()">
     <fa-icon icon="plus"></fa-icon>
@@ -98,8 +102,8 @@
     </tbody>
   </table>
 </div> -->
-<!-- ------------------------- -->
-<!-- <ng-template #modalContent let-close="close">
+  <!-- ------------------------- -->
+  <!-- <ng-template #modalContent let-close="close">
   <div class="modal-header">
     <h5 class="modal-title">Event action occurred</h5>
     <button type="button" class="close" (click)="close()">
