--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@
  */
 
 // Import Default Theme for MIDAS
-@import "theme/custom/denim-yellowgreen";
+@import "theme/custom/default_theme.scss";
 // @import "theme/custom/pictonblue-yellowgreen.scss";
 
 // Global Imports
